--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,9 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: var(--font-family);
 }
 
 body {
+  --font-family: "Roboto", sans-serif;
 }
