--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,13 +1,14 @@
 #footer {
   background-color: black;
   color: white;
+  padding: 80px 0;
 }
 
 #footer .footer-content {
   display: flex;
   width: 60%;
   margin: auto;
-  padding: 80px 0;
+  justify-content: space-between;
 }
 
 #footer .footer-content .footer-menu {
