--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,12 @@ body {
   border-radius: 30px;
   letter-spacing: 1px;
   font-weight: bold;
+  transition: all 300ms ease;
+}
+.btn-primary:hover {
+  background: #1ed760;
+  cursor: pointer;
+  transition: all 300ms ease;
 }
 
 .logo {
